--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
   "type": "module",
   "dependencies": {
     "@floating-ui/dom": "1.5.1",
+    "ai": "^2.2.10",
     "highlight.js": "11.8.0",
-    "sse.js": "^0.6.1"
+    "openai": "^4.3.1"
   }
 }
