--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "postcss": "8.4.28",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.10.1",
+    "supabase": "^1.88.0",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
     "tailwindcss": "3.3.3",
@@ -44,6 +45,8 @@
   "type": "module",
   "dependencies": {
     "@floating-ui/dom": "1.5.1",
+    "@supabase/auth-helpers-sveltekit": "^0.10.2",
+    "@supabase/supabase-js": "^2.33.1",
     "ai": "^2.2.10",
     "highlight.js": "11.8.0",
     "openai": "^4.3.1"
