--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
+# public
+DOMAIN = "http://localhost:5173"
 PUBLIC_SUPABASE_URL=""
 PUBLIC_SUPABASE_ANON_KEY=""
-PRIVATE_SERVICE_ROLE_KEY_SUPABASE=""
+
+# private
+PRIVATE_SERVICE_ROLE_KEY_SUPABASE = ""
 PRIVATE_OPENAI_KEY = ""
