--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@supabase/supabase-js": "^2.33.1",
     "ai": "^2.2.10",
     "highlight.js": "11.8.0",
-    "openai": "^4.3.1"
+    "openai": "^4.3.1",
+    "stripe": "^13.5.0"
   }
 }
