--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
 # public
-DOMAIN = "http://localhost:5173"
-PUBLIC_SUPABASE_URL=""
-PUBLIC_SUPABASE_ANON_KEY=""
+PUBLIC_DOMAIN = ""
+PUBLIC_SUPABASE_URL= ""
+PUBLIC_SUPABASE_ANON_KEY= ""
+PUBLIC_STRIPE_KEY = ""
 
 # private
 PRIVATE_SERVICE_ROLE_KEY_SUPABASE = ""
 PRIVATE_OPENAI_KEY = ""
-STRIPE_SECRET_KEY = ""
+PRIVATE_STRIPE_KEY = ""
+PRIVATE_WEBHOOK_SECRET = ""
