--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ PRIVATE_SERVICE_ROLE_KEY_SUPABASE = ""
 PRIVATE_OPENAI_KEY = ""
 PRIVATE_STRIPE_KEY = ""
 PRIVATE_WEBHOOK_SECRET = ""
+
+PRIVATE_ORIGINALITY_KEY = ""
+PRIVATE_SAPLING_KEY = ""
+PRIVATE_ZEROGPT_KEY = ""
