--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ PRIVATE_WEBHOOK_SECRET = ""
 PRIVATE_ORIGINALITY_KEY = ""
 PRIVATE_SAPLING_KEY = ""
 PRIVATE_ZEROGPT_KEY = ""
+
+PRIVATE_ZEROGPT_EMAIL =""
+PRIVATE_ZEROGPT_PASSWORD =""
